# src/main/kotlin/bambamboole/pdfua/http/RenderHtmlRequest.kt
@@ -1,6 +1,7 @@
 package bambamboole.pdfua.http
 
 import bambamboole.pdfua.template.FileAttachment
+import bambamboole.pdfua.template.XmpSchema
 import kotlinx.serialization.Serializable
 
 @Serializable
@@ -8,5 +9,6 @@ data class RenderHtmlRequest(
     val html: String,
     val baseUrl: String? = null,
     val attachments: List<FileAttachment>? = null,
+    val xmpSchemas: List<XmpSchema>? = null,
     val embedColorProfile: Boolean = true,
 )
